--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ body {
     margin: 0;
     min-width: 100%;
     min-height: 100vh;
+ 
 }
 
 .hide-scrollbar::-webkit-scrollbar {
@@ -31,6 +32,21 @@ body {
         padding-left: 12px;
         padding-right: 12px;
     }
+}
+
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-marquee {
+  animation: marquee 20s linear infinite;
+  white-space: nowrap;
 }
 
 
